[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2o_wave_university"
description = "Interactive tutorials for learning H2O Wave framework."
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Turoci", email = "martin.turoci@h2o.ai"},
]
keywords = ["UI", "Tutorial", "Low code", "Data Science", "Machine Learning"]
dynamic = ["version", "dependencies"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: System :: Distributed Computing",
]
[project.scripts]
wave-university = "h2o_wave_university.cli:main"
[project.urls]
Homepage = "https://wave.h2o.ai/"
Documentation = "https://wave.h2o.ai/"
Repository = "https://github.com/h2oai/wave"
Changelog = "https://github.com/h2oai/wave/releases"
[tool.hatch.version]
path = "h2o_wave_university/version.py"
[tool.hatch.build]
exclude = [
  "h2o_wave_university/lessons",
  "h2o_wave_university/static",
]
[tool.hatch.build.targets.wheel.force-include]
"../tools/vscode-extension/server/parser.py" = "h2o_wave_university/autocomplete_parser.py"
"../tools/vscode-extension/server/utils.py" = "h2o_wave_university/autocomplete_utils.py"
[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"
[tool.hatch.build.targets.wheel.shared-data]
"h2o_wave_university/lessons" = "lessons"
"h2o_wave_university/static" = "static"
"../tools/vscode-extension/base-snippets.json" = "static/base_snippets.json"
"../tools/vscode-extension/component-snippets.json" = "static/component_snippets.json"