[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h2o_lightwave"
description = "H2O Wave Python driver for integration with arbitrary python web frameworks."
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Turoci", email = "martin.turoci@h2o.ai"},
]
keywords = ["UI", "Realtime", "Low code", "Data Science", "Machine Learning"]
dynamic = ["version"]
dependencies = [
    "h2o_lightwave_web",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Widget Sets",
]
[project.urls]
Homepage = "https://wave.h2o.ai/"
Documentation = "https://wave.h2o.ai/"
Repository = "https://github.com/h2oai/wave"
Changelog = "https://github.com/h2oai/wave/releases"
[tool.hatch.version]
path = "h2o_lightwave/version.py"
[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"
[tool.hatch.build.targets.wheel.shared-data]
"tmp" = "."